# tuxpaintvst

./: .gitignore  CMakeLists.txt  README.md  notes.md
.github/workflows/: cmake_ctest.yml
JUCE/modules/juce_audio_basics/synthesisers/: juce_Synthesiser.cpp
JUCE/modules/juce_audio_utils/gui/: juce_MidiKeyboardComponent.h
JUCE/modules/juce_gui_basics/buttons/: juce_Button.h
JUCE/modules/juce_gui_extra/misc/: juce_AppleRemote.h  juce_KeyMappingEditorComponent.cpp
Source/: BrushesOptionsPanel.cpp  ButtonSelector.cpp  ButtonSelector.h  CanvasPanel.h  ColorButton.cpp  ColorButton.h  ColorsPanel.cpp  ColorsPanel.h  FillOptionsPanel.h  InfoPanel.cpp  InfoPanel.h  NamedToolButton.cpp  NamedToolButton.h  OptionsPanel.cpp  OptionsPanel.h  Oscillator.cpp  Oscillator.h  OscillatorCoefficients.cpp  OscillatorCoefficients.h  OscilloscopeData.cpp  OscilloscopeData.h  OscilloscopePanel.cpp  OscilloscopePanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScrollButton.cpp  ScrollButton.h  ShapesOptionsPanel.cpp  ShapesOptionsPanel.h  TitlePanel.cpp  TitlePanel.h  ToolButton.cpp  ToolButton.h  ToolsPanel.cpp  ToolsPanel.h  TuxConstants.h  TuxPaint.cpp  TuxPaint.h  (+4 more)
Source/BinaryDataHeaders/: BinaryDataBrushes.h  BinaryDataFills.h  BinaryDataFonts.h  BinaryDataMagicIcons.h  BinaryDataShapes.h  BinaryDataTools.h  BinaryDataUI.h  README.txt
Source/Canvas/: BrushGraphics.cpp  BrushGraphics.h  CanvasPanel.cpp  CanvasPanel.h  EraserGraphics.cpp  EraserGraphics.h  FillGraphics.cpp  FillGraphics.h  GraphicsBase.cpp  GraphicsBase.h  MagicGraphics.cpp  MagicGraphics.h  MusicGuiOverlay.cpp  MusicGuiOverlay.h
Source/Canvas/Magic/: Blocks.cpp  Blocks.h  Blur.cpp  Blur.h  Distortion.cpp  Distortion.h  Flip.h  MagicBase.h  MagicConstants.h  MagicModes.h  Mirror.h  MirrorFlip.cpp  MirrorFlip.h
Source/OptionPanels/: BrushesOptionsPanel.cpp  BrushesOptionsPanel.h  ButtonSelector.cpp  ButtonSelector.h  EraserOptionPanel.cpp  EraserOptionPanel.h  FillOptionsPanel.cpp  FillOptionsPanel.h  MagicOptionPanel.cpp  MagicOptionPanel.h  OptionsPanel.cpp  OptionsPanel.h  ShapesOptionsPanel.cpp  ShapesOptionsPanel.h  SizeSelector.cpp  SizeSelector.h  StampOptionPanel.cpp  StampOptionPanel.h
Source/data/brushes/: BinaryData.h  getData.py
experiments/: Untitled.ipynb  Wavetable FFT.ipynb  fft_drift.py
experiments/.ipynb_checkpoints/: Wavetable FFT-checkpoint.ipynb
packaging/: TuxPaintVST.pkgproj  dmg.json  installer.iss
tuxvst/: CMakeLists.txt
tuxvst/JUCE/modules/juce_core/containers/: juce_OwnedArray.h
tuxvst/Source/: CanvasPanel.cpp  CanvasPanel.h  ColorsPanel.h  PluginEditor.cpp  PluginProcessor.cpp  TitlePanel.cpp  TitlePanel.h  ToolButton.cpp  ToolButton.h  ToolsPanel.cpp  ToolsPanel.h  TuxConstants.h  TuxPaint.cpp  TuxPaint.h
tuxvst/Source/data/fonts/: BinaryData.h
tuxvst/Source/data/images/fills/: BinaryData.h
tuxvst/packaging/: dmg.json  installer.iss
